# Generated by Django 6.0.5 on 2026-05-27 14:16

import django.db.models.deletion
from django.conf import settings
from django.db import migrations, models


class Migration(migrations.Migration):

    dependencies = [
        ('core', '0007_add_skillgap_status_problemrec_elaw_platform'),
    ]

    operations = [
        migrations.CreateModel(
            name='QuizSession',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('job_role', models.CharField(max_length=100)),
                ('session_data', models.JSONField()),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('user', models.OneToOneField(on_delete=django.db.models.deletion.CASCADE, related_name='quiz_session', to=settings.AUTH_USER_MODEL)),
            ],
            options={
                'db_table': 'quiz_sessions',
            },
        ),
        migrations.CreateModel(
            name='RecommendSession',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('job_role', models.CharField(max_length=100)),
                ('zone', models.CharField(max_length=20)),
                ('weights', models.JSONField()),
                ('weak_categories', models.JSONField()),
                ('responses', models.JSONField()),
                ('recommendations', models.JSONField()),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('user', models.OneToOneField(on_delete=django.db.models.deletion.CASCADE, related_name='recommend_session', to=settings.AUTH_USER_MODEL)),
            ],
            options={
                'db_table': 'recommend_sessions',
            },
        ),
    ]
